<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu_group_logged_in" >
        <group android:id="@+id/menu_group_feeds" >

            <!--
                 <item
                android:id="@+id/back_to_categories"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                app:showAsAction=""
                android:title="@string/back_to_categories"/>
            -->

            <item
                android:id="@+id/subscribe_to_feed"
                android:icon="@drawable/ic_new_light"
                app:showAsAction=""
                android:title="@string/subscribe_to_feed"/>

            <item
                android:id="@+id/show_feeds"
                android:icon="@drawable/ic_list_light"
                app:showAsAction=""
                android:title="@string/menu_all_feeds"/>
            <item
                android:id="@+id/go_offline"
                android:icon="@drawable/ic_cloud_light"
                app:showAsAction="ifRoom"
                android:title="@string/go_offline"/>            
            <item
                android:id="@+id/update_feeds"
                android:icon="@drawable/ic_refresh_light"
                app:showAsAction=""
                android:title="@string/update_feeds"/>
            <item
                android:id="@+id/logout"
                app:showAsAction=""
                android:title="@string/logout"/>
        </group>
        <group android:id="@+id/menu_group_headlines" >
            <item
                android:id="@+id/update_headlines"
                android:icon="@drawable/ic_refresh_light" 
                app:showAsAction=""
                android:title="@string/update_headlines"/>
            <item
                android:id="@+id/search"
                android:icon="@drawable/ic_search_light"
                app:showAsAction="ifRoom"
                android:title="@string/search"/>
            <item
                android:id="@+id/headlines_mark_as_read"
                android:icon="@drawable/ic_accept_light"
                app:showAsAction=""
                android:title="@string/headlines_mark_as_read"/>
            <item
                android:id="@+id/headlines_select"
                app:showAsAction=""
                android:icon="@drawable/ic_select_all_light"
                android:title="@string/headlines_select"/>

            <item
                android:id="@+id/headlines_toggle_sort_order"
                android:icon="@drawable/ic_action_sort_by_size"
                app:showAsAction="ifRoom"
                android:title="@string/toggle_sort_order"/>

            <item
                android:id="@+id/headlines_view_mode"
                app:showAsAction=""
                android:title="@string/headlines_view_mode"/>
            
            <!-- <item
                android:id="@+id/headlines_toggle_sidebar"
                app:showAsAction=""
                android:title="@string/toggle_sidebar"/> -->
            
            <!--
                  <item
                android:id="@+id/close_feed"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                app:showAsAction=""
                android:title="@string/close_feed"/>
            -->

        </group>
        <!--  <group android:id="@+id/menu_group_headlines_selection" >
            <item
                android:id="@+id/selection_toggle_unread"
                app:showAsAction="ifRoom"
                android:title="@string/selection_toggle_unread"/>
            <item
                android:id="@+id/selection_toggle_marked"
                android:icon="@drawable/ic_unimportant_light"
                app:showAsAction="ifRoom"
                android:title="@string/selection_toggle_marked"/>
            <item
                android:id="@+id/selection_toggle_published"
                android:icon="@drawable/ic_menu_unpublished_light"
                app:showAsAction="ifRoom"
                android:title="@string/selection_toggle_published"/>
            <item
                android:id="@+id/selection_select_none"
                app:showAsAction=""
                android:title="@string/selection_select_none"/>
        </group> -->
        <group android:id="@+id/menu_group_article" >
            <item
                android:id="@+id/toggle_marked"
                android:icon="@drawable/ic_unimportant_light"
                app:showAsAction="ifRoom"
                android:title="@string/article_toggle_marked"/>
            <item
                android:id="@+id/toggle_published"
                android:icon="@drawable/ic_menu_unpublished_light"
                app:showAsAction="ifRoom"
                android:title="@string/article_toggle_published"/>
            <item
                android:id="@+id/toggle_attachments"
                android:icon="@drawable/ic_menu_attaches_light"
                app:showAsAction=""
                android:title="@string/attachments_prompt"/>
            <item
                android:id="@+id/share_article"
                android:icon="@drawable/ic_share_light"
                app:showAsAction="ifRoom"
                android:title="@string/share_article"/>
            <!--  android:actionProviderClass="android.widget.ShareActionProvider" -->
            <item
                android:id="@+id/set_labels"
                app:showAsAction=""
                android:icon="@drawable/ic_labels_light"
                android:title="@string/article_set_labels"/>
            <item
                android:id="@+id/article_set_note"
                app:showAsAction=""
                android:title="@string/article_set_note"/>

            <item
                android:id="@+id/catchup_above"
                android:title="@string/article_mark_read_above"/>

        </group>

        <item
            android:id="@+id/donate"
            app:showAsAction=""
            android:title="@string/trial_purchase"/>
    </group>

    <item
        android:id="@+id/preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction=""
        android:title="@string/preferences"/>

    <group android:id="@+id/menu_group_logged_out" >
        <item
            android:id="@+id/login"
            android:icon="@android:drawable/ic_menu_rotate"
            app:showAsAction="ifRoom|withText"
            android:title="@string/login_login"/>
    </group>

</menu>
