<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" >

    <group android:id="@+id/menu_group_feeds" >
    </group>
    <group android:id="@+id/menu_group_headlines" >
        <item
            android:id="@+id/search"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_magnify"
            android:title="@string/search"/>
        <item
            android:id="@+id/headlines_mark_as_read"
            android:icon="@drawable/ic_check_all"
            app:showAsAction=""
            android:title="@string/headlines_mark_as_read"/>
        <item
            android:id="@+id/headlines_select"
            android:icon="@drawable/ic_select"
            app:showAsAction="ifRoom"
            android:title="@string/headlines_select"/>

        <item
            android:id="@+id/headlines_toggle_sort_order"
            android:icon="@drawable/ic_sort"
            app:showAsAction="ifRoom"
            android:title="@string/toggle_sort_order"/>

        <item
            android:id="@+id/headlines_view_mode"
            android:icon="@drawable/ic_filter_outline"
            app:showAsAction=""
            android:title="@string/headlines_view_mode"/>
    </group>
    <group android:id="@+id/menu_group_article" >
        <item
            android:id="@+id/toggle_marked"
            android:icon="@drawable/ic_star_outline"
            app:showAsAction="ifRoom"
            android:title="@string/article_toggle_marked"/>
        <item
            android:id="@+id/toggle_published"
            android:icon="@drawable/ic_rss_box"
            app:showAsAction="ifRoom"
            android:title="@string/article_toggle_published"/>
        <item
            android:id="@+id/toggle_unread"
            android:icon="@drawable/ic_email"
            app:showAsAction="ifRoom"
            android:title="@string/article_toggle_unread"/>
        <!-- <item
            android:id="@+id/share_article"
            android:icon="@drawable/ic_share"
            app:showAsAction="ifRoom"
            android:title="@string/share_article"/> -->
        <item
            android:id="@+id/catchup_above"
            android:title="@string/article_mark_read_above"/>
    </group>

    <item
        android:id="@+id/preferences"
        app:showAsAction=""
        android:title="@string/preferences"/>

</menu>